# sea-codec

./: Cargo.toml  README.md  app.mjs  codec.wasm  deps.js  package-lock.json  package.json
.github/workflows/: build_cli.yml  build_wasm.yml  test_cli.yml
c/: demo.c  sea.h
examples/: bench.rs  seaconv.rs
src/: decoder.rs  encoder.rs  lib.rs  wasm_api.rs
src/codec/: base_encoder.rs  bits.rs  chunk.rs  common.rs  decoder.rs  dqt.rs  encoder.rs  encoder_base.rs  encoder_cbr.rs  encoder_vbr.rs  file.rs  lms.rs  mod.rs
tests/: helpers.rs  streaming.rs  test.rs  wav.rs
web/: app.mjs  index.html  utils.mjs  worker.js  worker.mjs
web/src/: index.js
