[package]
name = "sea-codec"
version = "0.5.2"
description = "Low-complexity, lossy audio codec designed for embedded devices"
homepage = "https://github.com/Daninet/sea-codec"
repository = "https://github.com/Daninet/sea-codec"
keywords = ["audio", "codec", "encoder", "decoder", "embedded"]
categories = ["multimedia::audio", "multimedia::encoding"]
readme = "README.md"
edition = "2021"
license = "MIT"

[dependencies]
bytemuck = "1.21.0"

[dev-dependencies]
hound = "3.5.1"
clap = "4.5.30"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm-api"]
wasm-api = []
